[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Game/Background.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/map.gd" type="Script" id=2]
[ext_resource path="res://Assets/ItemTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Game/PlayerController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Game/PlayerSprite.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/FieldTileset.tres" type="TileSet" id=8]
[ext_resource path="res://Assets/CropTileset.tres" type="TileSet" id=9]

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TileMap" parent="."]
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 256, 256 )
format = 1
script = ExtResource( 1 )
Base_Node = NodePath("../Base")

[node name="Base" type="TileMap" parent="."]
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 196604, 0, 0 )

[node name="Items1" type="TileMap" parent="."]
position = Vector2( -6, -6 )
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 256, 256 )
format = 1

[node name="Items2" type="TileMap" parent="."]
position = Vector2( 6, 6 )
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 256, 256 )
format = 1

[node name="Crops" type="TileMap" parent="."]
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 256, 256 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 327684, 1, 2, 393219, 1, 1, 458754, 1, 0 )

[node name="PlayerController" parent="Crops" instance=ExtResource( 6 )]
p1_node = NodePath("../Player1")
p2_node = NodePath("../Player2")
tilemap_node = NodePath("../../Base")

[node name="Player1" parent="Crops" instance=ExtResource( 7 )]
centered = true

[node name="Player2" parent="Crops" instance=ExtResource( 7 )]
animation = "OrangeIdleDown"
centered = true
color = "Orange"

[connection signal="move_completed" from="Crops/PlayerController" to="." method="_on_PlayerController_move_completed"]
